iptables/00-iptables.up.rules/orch/iptables-151020-1046
# Generated by iptables-save v1.3.5 on Tue Oct 20 10:44:50 2015
*nat
:PREROUTING ACCEPT [1:40]
:POSTROUTING ACCEPT [129:7740]
:OUTPUT ACCEPT [129:7740]
COMMIT
# Completed on Tue Oct 20 10:44:50 2015
# Generated by iptables-save v1.3.5 on Tue Oct 20 10:44:50 2015
*mangle
:PREROUTING ACCEPT [5309:2496203]
:INPUT ACCEPT [5309:2496203]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5138:2503195]
:POSTROUTING ACCEPT [5138:2503195]
COMMIT
# Completed on Tue Oct 20 10:44:50 2015
# Generated by iptables-save v1.3.5 on Tue Oct 20 10:44:50 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [5111:2494543]
:allowed_sites - [0:0]
:filter_hackers - [0:0]
:ktrnd_sites - [0:0]
:log_allow - [0:0]
:log_allow_special - [0:0]
:log_deny - [0:0]
:tcp_attack - [0:0]
:trusted_zones - [0:0]
-A INPUT -j allowed_sites 
-A INPUT -j filter_hackers 
-A INPUT -j log_deny 
-A FORWARD -j allowed_sites 
-A FORWARD -j filter_hackers 
-A FORWARD -j log_deny 
-A OUTPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP 
-A allowed_sites -j ktrnd_sites 
-A allowed_sites -j trusted_zones 
-A allowed_sites -p udp -m udp --dport 53:54 -j ACCEPT 
-A allowed_sites -p udp -m udp --dport 67:68 -j ACCEPT 
-A allowed_sites -m conntrack --ctstate RELATED,ESTABLISHED -j log_allow 
-A allowed_sites -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A filter_hackers -j tcp_attack 
-A filter_hackers -j log_deny 
-A ktrnd_sites -s 10.0.0.0/255.255.255.0 -j ACCEPT 
-A ktrnd_sites -s 127.0.0.1 -d 127.0.0.1 -i lo -j ACCEPT 
-A ktrnd_sites -s 211.224.204.128/255.255.255.128 -j ACCEPT 
-A ktrnd_sites -s 221.151.188.0/255.255.255.0 -j ACCEPT 
-A ktrnd_sites -s 222.118.131.0/255.255.255.0 -j ACCEPT 
-A log_allow -j LOG --log-prefix "'FIREWALL_ALLOW'" 
-A log_allow -j ACCEPT 
-A log_allow_special -j LOG --log-prefix "'FIREWALL_ALLOW_SPECIAL'" 
-A log_allow_special -j ACCEPT 
-A log_deny -j LOG --log-prefix "'FIREWALL_DENY'" 
-A log_deny -j DROP 
-A tcp_attack -f -j DROP 
-A tcp_attack -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP 
-A tcp_attack -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP 
-A tcp_attack -m state --state INVALID -j DROP 
-A trusted_zones -s 192.168.0.0/255.255.255.0 -j ACCEPT 
-A trusted_zones -s 192.168.1.0/255.255.255.0 -j ACCEPT 
-A trusted_zones -s 192.168.2.0/255.255.255.0 -j ACCEPT 
-A trusted_zones -s 192.168.10.0/255.255.255.0 -j ACCEPT 
-A trusted_zones -s 10.0.2.0/255.255.255.0 -j ACCEPT 
-A trusted_zones -s 218.55.236.0/255.255.255.0 -j ACCEPT 
-A trusted_zones -s 123.212.42.21 -j ACCEPT 
-A trusted_zones -s 123.212.42.40 -j ACCEPT 
-A trusted_zones -s 123.212.42.41 -j ACCEPT 
-A trusted_zones -s 123.212.42.42 -j ACCEPT 
-A trusted_zones -s 123.212.42.43 -j ACCEPT 
-A trusted_zones -s 123.212.42.46 -j ACCEPT 
-A trusted_zones -s 125.138.110.183 -j ACCEPT 
COMMIT
# Completed on Tue Oct 20 10:44:50 2015
